--- a/templates/list_of_users.html.hbs
+++ b/templates/list_of_users.html.hbs
@@ -7,8 +7,10 @@
 </head>
 <body>
    <h1> List of all the users </h1> 
+
+
 	{{#each users}}
-		<li> Name {{name}} with an age of {{age}} </li>
+		<li> Name {{this.name}} with an age of {{this.age}} </li>
 	{{/each}}
 </body>
 </html>
