--- a/templates/login.html.hbs
+++ b/templates/login.html.hbs
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <head></head>
 <body>
-    
-<h1>
-    this is the login page?
-</h1>
-<a target="signup">Sign up page</a>
-<form action="login" method="post">
-    <label for="email">Email</label>
-    <input name="email" type="text">
 
-    <label for="password">Password</label>
-    <input name="password" type="password">
+	<h1>
+		this is the login page?
+	</h1>
+	<a target="signup">Sign up page</a>
+	<form action="login" method="post">
+		<label for="email">Email</label>
+		<input name="email" type="text">
 
-    <button type="submit">login</button>
-</form>
+		<label for="password">Password</label>
+		<input name="password" type="password">
 
-<h2> This is a second form</h2>
+		<button type="submit">login</button>
+	</form>
 
+	<h2> This is a second form</h2>
+	<form action="/signup" method="post">
+		<label for="email">Email</label><br>
+		<input type="text" id="email" name="email" value="e@mail.com"><br>
 
- <form action="/action_page.php">
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value="John"><br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Doe"><br><br>
-  <input type="submit" value="Submit">
-</form> 
+		<label for="password">Password</label><br>
+		<input type="password" id="password" name="fname" value="John"><br>
+
+		<label for="fname">First name:</label><br>
+		<input type="text" id="fname" name="fname" value="John"><br>
+
+		<label for="lname">Last name:</label><br>
+		<input type="text" id="lname" name="lname" value="Doe"><br><br>
+
+		<input type="submit" value="Submit">
+	</form> 
 
 </body>
