Small frontend changes

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -14,5 +14,9 @@
 		<li> <a href="/random/254"> Show a random Integer </a> </li>
 		<li> <a href="/test">Template Test</a> </li>
 	</ul>
+	<h1> Work in progress </h1>
+	<ul>
+		<li> <a href="/signup"> Signup page </a>  </li>
+	</ul>
 </body>
 </html>
